<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ImageView
        android:id="@+id/gameplay_char_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_1_s_character"
        app:layout_constraintBottom_toTopOf="@id/up_guideline"
        app:layout_constraintEnd_toStartOf="@+id/gameplay_char_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:srcCompat="@drawable/img_01_mario" />

    <ImageView
        android:id="@+id/gameplay_char_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_2_s_character"
        app:layout_constraintBottom_toTopOf="@id/mid_guideline"
        app:layout_constraintEnd_toStartOf="@id/gameplay_char_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/up_guideline"
        app:srcCompat="@drawable/img_02_dk" />

    <ImageView
        android:id="@+id/gameplay_char_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_3_s_character"
        app:layout_constraintBottom_toTopOf="@id/up_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameplay_char_0"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:srcCompat="@drawable/img_03_link" />

    <ImageView
        android:id="@+id/gameplay_char_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_4_s_character"
        app:layout_constraintBottom_toTopOf="@+id/mid_guideline"
        app:layout_constraintStart_toEndOf="@+id/gameplay_char_1"
        app:layout_constraintTop_toBottomOf="@+id/up_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/img_04_samus" />

    <TextView
        android:id="@+id/number_of_wins"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="128sp"
        android:autoSizeMinTextSize="50sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#fff"
        style="@style/textStyle"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/losses_image"
        app:layout_constraintTop_toBottomOf="@id/mid_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/skip0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/lower_guideline"
        app:layout_constraintTop_toBottomOf="@+id/mid_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skip1"
        android:background="@android:color/transparent"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/skip_icon" />

    <ImageView
        android:id="@+id/skip1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/lower_guideline"
        app:layout_constraintEnd_toStartOf="@id/skip0"
        app:layout_constraintStart_toEndOf="@+id/skip2"
        app:layout_constraintTop_toBottomOf="@+id/mid_guideline"
        app:srcCompat="@drawable/skip_icon" />

    <ImageView
        android:id="@+id/skip2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/lower_guideline"
        app:layout_constraintEnd_toStartOf="@id/skip1"
        app:layout_constraintStart_toEndOf="@id/number_of_wins"
        app:layout_constraintTop_toBottomOf="@+id/mid_guideline"
        app:srcCompat="@drawable/skip_icon" />

    <ImageView
        android:id="@+id/losses_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/losses_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lower_guideline"
        app:layout_constraintStart_toEndOf="@id/number_of_wins"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/lose_0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/up_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lower_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />



</androidx.constraintlayout.widget.ConstraintLayout>