<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="@color/red">

    <ImageView
        android:id="@+id/gameplay_char_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:contentDescription="@string/player_1_s_character"
        app:layout_constraintBottom_toTopOf="@+id/gameplay_char_1"
        app:layout_constraintEnd_toStartOf="@+id/gameplay_char_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_01_mario" />

    <ImageView
        android:id="@+id/gameplay_char_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_2_s_character"
        app:layout_constraintBottom_toTopOf="@+id/number_of_wins"
        app:layout_constraintEnd_toStartOf="@id/gameplay_char_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameplay_char_0"
        app:srcCompat="@drawable/img_02_dk" />

    <ImageView
        android:id="@+id/gameplay_char_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_2_s_character"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameplay_char_0"
        app:layout_constraintBottom_toTopOf="@id/gameplay_char_3"
        app:srcCompat="@drawable/img_03_link" />

    <ImageView
        android:id="@+id/gameplay_char_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_2_s_character"
        app:layout_constraintBottom_toTopOf="@id/number_of_wins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameplay_char_1"
        app:layout_constraintTop_toBottomOf="@id/gameplay_char_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_04_samus" />

    <ImageView
        android:id="@+id/losses_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/losses_image"
        app:layout_constraintBottom_toTopOf="@id/skip0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/number_of_wins"
        app:layout_constraintStart_toEndOf="@id/number_of_wins"
        app:srcCompat="@drawable/lose_0" />

    <TextView
        android:id="@+id/number_of_wins"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="128sp"
        android:autoSizeMinTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gameplay_char_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameplay_char_3" />

    <ImageView
        android:id="@+id/skip0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/skip1"
        app:layout_constraintStart_toEndOf="@id/number_of_wins"
        app:layout_constraintTop_toBottomOf="@+id/losses_image"
        app:srcCompat="@drawable/skip_icon" />

    <ImageView
        android:id="@+id/skip1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/skip2"
        app:layout_constraintStart_toEndOf="@+id/skip0"
        app:layout_constraintTop_toBottomOf="@+id/losses_image"
        app:srcCompat="@drawable/skip_icon" />

    <ImageView
        android:id="@+id/skip2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/losses_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skip1"
        app:srcCompat="@drawable/skip_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>