<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/win_line_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/win_line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire9"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/ran_char_1"
        app:layout_constraintRight_toRightOf="@id/ran_char_1"
        app:layout_constraintBottom_toBottomOf="@id/ran_char_1"
        app:layout_constraintTop_toTopOf="@id/ran_char_1"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire8"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/ran_char_0"
        app:layout_constraintRight_toRightOf="@id/ran_char_0"
        app:layout_constraintBottom_toBottomOf="@id/ran_char_0"
        app:layout_constraintTop_toTopOf="@id/ran_char_0"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire7"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_7"
        app:layout_constraintRight_toRightOf="@id/win_char_7"
        app:layout_constraintBottom_toBottomOf="@id/win_char_7"
        app:layout_constraintTop_toTopOf="@id/win_char_7"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire6"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_6"
        app:layout_constraintRight_toRightOf="@id/win_char_6"
        app:layout_constraintBottom_toBottomOf="@id/win_char_6"
        app:layout_constraintTop_toTopOf="@id/win_char_6"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_5"
        app:layout_constraintRight_toRightOf="@id/win_char_5"
        app:layout_constraintBottom_toBottomOf="@id/win_char_5"
        app:layout_constraintTop_toTopOf="@id/win_char_5"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_4"
        app:layout_constraintRight_toRightOf="@id/win_char_4"
        app:layout_constraintBottom_toBottomOf="@id/win_char_4"
        app:layout_constraintTop_toTopOf="@id/win_char_4"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_3"
        app:layout_constraintRight_toRightOf="@id/win_char_3"
        app:layout_constraintBottom_toBottomOf="@id/win_char_3"
        app:layout_constraintTop_toTopOf="@id/win_char_3"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_2"
        app:layout_constraintRight_toRightOf="@id/win_char_2"
        app:layout_constraintBottom_toBottomOf="@id/win_char_2"
        app:layout_constraintTop_toTopOf="@id/win_char_2"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_1"
        app:layout_constraintRight_toRightOf="@id/win_char_1"
        app:layout_constraintBottom_toBottomOf="@id/win_char_1"
        app:layout_constraintTop_toTopOf="@id/win_char_1"
        android:src="@drawable/fire_cropped2"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/fire0"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintVertical_bias="1"
        android:paddingBottom="45dp"
        android:contentDescription="@string/smash_logo"
        app:layout_constraintLeft_toLeftOf="@id/win_char_0"
        app:layout_constraintRight_toRightOf="@id/win_char_0"
        app:layout_constraintBottom_toBottomOf="@id/win_char_0"
        app:layout_constraintTop_toTopOf="@id/win_char_0"
        android:src="@drawable/fire_cropped2"
        />

    <ImageView
        android:id="@+id/win_char_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/win_char_1"
        app:layout_constraintEnd_toStartOf="@+id/win_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/win_line_0"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/win_char_2"
        app:layout_constraintEnd_toStartOf="@+id/win_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/win_char_0"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@id/win_char_3"
        app:layout_constraintEnd_toStartOf="@+id/win_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/win_char_1"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ran_char_0"
        app:layout_constraintEnd_toStartOf="@+id/win_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/win_char_2"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/ran_char_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/win_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/win_char_3"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="@id/win_line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/win_char_5"
        app:layout_constraintTop_toBottomOf="@+id/win_line_0"
        app:srcCompat="@drawable/img_01_mario"
        tools:layout_editor_absoluteY="154dp"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="@id/win_line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/win_char_6"
        app:layout_constraintTop_toBottomOf="@id/win_char_4"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="@id/win_line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/win_char_7"
        app:layout_constraintTop_toBottomOf="@id/win_char_5"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/win_char_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="@id/win_line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ran_char_1"
        app:layout_constraintTop_toBottomOf="@id/win_char_6"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <ImageView
        android:id="@+id/ran_char_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/win_char_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/win_line_1"
        app:srcCompat="@drawable/img_01_mario"
        android:contentDescription="@string/winning_team_character" />

    <TextView
        android:id="@+id/winningTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/winningteam"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/win_line_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>